<resources>
    <string name="app_name">Flickr Gallery</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title">Title</string>
    <string name="date_taken">Date taken</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="tags">Tags</string>
    <string name="onFailure">Unable to contact Flickr website</string>
    <string name="onBadResponse">Flickr site returned a bad response</string>
    <string name="success">success</string>
</resources>
