<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="270dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/ivDetailImage"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ivDetailImage"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginLeft="8dp" />

    <TextView
        android:text="TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        android:layout_marginStart="48dp"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ivDetailImage"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:layout_marginRight="16dp" />

    <TextView
        android:text="@string/date_taken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        app:layout_constraintLeft_toLeftOf="@+id/textView6"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvTimestamp" />

    <TextView
        android:text="TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvTimestamp"
        app:layout_constraintLeft_toLeftOf="@+id/tvTitle"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintRight_toRightOf="@+id/tvTitle" />

    <TextView
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        app:layout_constraintLeft_toLeftOf="@+id/textView8"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDescription" />

    <TextView
        android:text="TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDescription"
        app:layout_constraintLeft_toLeftOf="@+id/tvTimestamp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTimestamp"
        app:layout_constraintRight_toRightOf="@+id/tvTimestamp" />

    <TextView
        android:text="@string/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        app:layout_constraintLeft_toLeftOf="@+id/textView10"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvAuthor" />

    <TextView
        android:text="TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvAuthor"
        app:layout_constraintLeft_toLeftOf="@+id/tvDescription"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        app:layout_constraintRight_toRightOf="@+id/tvDescription" />

    <TextView
        android:text="@string/tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        app:layout_constraintLeft_toLeftOf="@+id/textView12"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvTags" />

    <TextView
        android:text="TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/tvAuthor"
        android:id="@+id/tvTags"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthor"
        app:layout_constraintRight_toRightOf="@+id/tvAuthor" />
</android.support.constraint.ConstraintLayout>